# bpmn-modeling

./: .gitignore  README.md  SKILL.md  config.ini  create_skill_zip.py  pyproject.toml  validate_bpmn.py  validate_bpmn_db.py
.claude/: settings.local.json
.claude-plugin/: plugin.json
.github/workflows/: release-cowork.yml
cowork/: SKILL.md  create_skill_zip.py  install_hooks.py  release.py
references/rules/: end_event.md  exclusive_gateway.md  flow_object.md
scripts/: validate_bpmn.py
skills/bpmn-modeling/: SKILL.md  pyproject.toml
skills/bpmn-modeling/cowork/: SKILL.md  create_skill_zip.py
skills/bpmn-modeling/references/rules/: end_event.md  exclusive_gateway.md  flow_object.md  parallel_gateway.md  start_event.md
skills/bpmn-modeling/scripts/: validate_bpmn.py
skills/bpmn-modeling/wheels/: basic_framework-3.5.1-py3-none-any.whl  bpmn_lib-4.0.5-py3-none-any.whl
