[project]
name = "bpmn-modeling"
version = "1.0.0"
description = "BPMN modeling skill for process automation"
requires-python = ">=3.13"
dependencies = [
    "bpmn-lib @ git+https://github.com/hennig-ai/bpmn-lib.git",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
